<resources>
    <string name="app_name">Jardine SFA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="search">Search</string>
    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Profile</item>
        <item>Sync</item>
        <item>Workplan</item>
        <item>Activities</item>
        <item>Customers</item>
        <item>Collaterals</item>
        <item>Logout</item>
    </string-array>
    <string-array name="activity_spinner_items">
        <item>CRM No</item>
        <item>Workplan</item>
        <item>Activity Type</item>
        <item>Assigned To</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="customer_header_id">ID</string>
    <string name="customer_header_name">Name</string>
    <string name="customer_header_type">Type</string>
    <string name="customer_header_province">Province</string>
    <string name="profile_information">Information</string>
    <string name="profile_notification">Notifications</string>
    <string name="profile_info_userinformation">User Information</string>
    <string name="profile_info_username">Username</string>
    <string name="profile_info_firstname">First Name:</string>
    <string name="profile_info_lastname">Last Name:</string>
    <string name="profile_info_area">Area(s) assigned:</string>
    <string name="profile_info_syncinformation">Syncing Information</string>
    <string name="profile_info_lastsync">Last sync:</string>
    <string name="profile_notif_date">Date</string>
    <string name="profile_notif_notification">Notification</string>
    <string name="profile_notif_action">Action</string>
    <string name="profile_notif_remove">Remove</string>
    <string name="workplan_details">Workplan Details</string>
    <string name="workplan_activities">Activities</string>
    <string name="workplan_customer">Customer</string>
    <string name="workplan_date">Date</string>
    <string name="workplan_activity_type">Actvity Type</string>
    <string name="workplan_info_date">Date</string>
    <string name="workplan_info_area">Area</string>
    <string name="workplan_info_citytown">City or Town</string>
    <string name="workplan_info_acttype">Activity Type</string>
    <string name="workplan_info_createdtime">Created Time</string>
    <string name="workplan_info_assignedto">Created By</string>
    <string name="workplan_info_customer">Customer</string>
    <string name="workplan_info_status">Status</string>
    <string name="workplan_info_province">Province</string>
    <string name="workplan_info_otherremarks">Other Remarks</string>
    <string name="workplan_info_workplan">Workplan</string>
    <string name="workplan_info_modifiedtime">Modified Time</string>
    <string name="workplan_add_activity">Add Activity</string>
    <string name="workplan_start_time">Start Time</string>
    <string name="workplan_end_time">End Time</string>
    <string name="workplan_from">FROM</string>
    <string name="workplan_to">TO</string>
    <string name="workplan_title">Workplan</string>
    <string name="workplan_header_id">WPID</string>
    <string name="workplan_header_customer">Customer</string>
    <string name="workplan_header_date">Date</string>
    <string name="workplan_header_activity">Activity Type</string>
    <string name="more_information">More Information</string>
    <string name="activity_information">Activity Information</string>
    <string name="jdi_product_stock_check">JDI Product Stock Check</string>
    <string name="jdi_merchandising_check">JDI Merchandising Check</string>
    <string name="competitor_product_stock_check">JDI Competitor Product Stock Check</string>
    <string name="marketing_intel"> Marketing Intel</string>
    <string name="project_requirements">Project Requirements</string>
    <string name="diy_or_supermarket_photos">DIY or Supermarket Photos</string>
    <string name="customer_view_details">Customer Contact Person</string>
    <string name="products">Products</string>
    <string name="sample">Row # column #</string>
    <string name="edit">edit</string>
    <string name="del">delete</string>
    <string name="general_info">General Information</string>
    <string name="details">      Details      </string>
    <string name="travel_or_waiting">Travel or Waiting</string>
    <string name="admin_works">Admin Works</string>
    <string name="activity_details">Activity Details and Notes</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="identify_product_focus">Identify Product Focus</string>
    <string name="full_brand_activation">Full Brand Activation</string>
    <string name="activity_photos_attachments">Activity Photos Attachments</string>
    <string name="crm_no">CRM No</string>
    <string name="start_time">Start Time</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="latitude">Latitude</string>
    <string name="objective">Objective</string>
    <string name="highlights">Highlights</string>
    <string name="competitors_activities">Competitors\nActivities</string>
    <string name="follow_up_commitment_date">Follow-up\nCommitment Date</string>
    <string name="workplan_entry">Workplan Entry</string>
    <string name="first_time_visit">First Time Visit</string>
    <string name="created_time">Created Time</string>
    <string name="assigned_to">Created By</string>
    <string name="activity_gen">Activity</string>
    <string name="end_time">End Time</string>
    <string name="longitude">Longitude</string>
    <string name="notes">Notes</string>
    <string name="next_steps">Next Steps</string>
    <string name="activity_type">Activity Type</string>
    <string name="customer">Customer</string>
    <string name="planned_visit">Planned Visit</string>
    <string name="modified_time">Modified Time</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="source">Source</string>
    <string name="back_to_activity">Back to Activity </string>
    <string name="back">Back</string>
    <string name="others"> \"Others" Activity\nType Remarks</string>
    <string name="reason_remarks">Reason Remarks\n- Waiting or Travel</string>
    <string name="business_unit">Business Unit</string>
    <string name="details_admin_works">Details -\nAdmin Works</string>
    <string name="area">Area</string>
    <string name="province">Province</string>
    <string name="city_town">City/Town</string>
    <string name="other_type_remarks">Other - Type Remarks</string>
    <string name="end_user_activity_types">End-User Activity Types</string>
    <string name="no_data">Error 404: Search not found </string>
    <string name="list_empty">No Data.</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="contact_person_crm_no">CRM No</string>
    <string name="contact_person_firstname">First Name</string>
    <string name="contact_person_lastname">Last Name</string>
    <string name="contact_person_mobileno">Mobiel No</string>
    <string name="contact_person_email">Email Address</string>
    <string name="contact_person_position">Position</string>
    <string name="contact_person_birthday">Birthday</string>
    <string name="capslock_contact_person_firstname">FIRST NAME</string>
    <string name="capslock_contact_person_lastname">LAST NAME</string>
    <string name="capslock_contact_person_mobileno">MOBILE NO</string>
    <string name="capslock_contact_person_email">EMAIL ADDRESS</string>
    <string name="capslock_contact_person_position">POSITION</string>
    <string name="capslock_contact_person_birthday">BIRTHDAY</string>
    <string name="capslock_contact_person_details">CUSTOMER CONTACT PERSON DETAILS</string>
    <string name="contact_person_details_street_address">Street Address</string>
    <string name="contact_person_details_landline">Landline</string>
    <string name="contact_person_details_chain_name">Chain Name</string>
    <string name="contact_person_details_customer_size">Customer Size</string>
    <string name="contact_person_details_customer_type">Customer Type</string>
    <string name="contact_person_details_fax">Fax</string>
    <string name="contact_person_details_is_active">Is Active</string>
    <string name="contact_person_details_edit">Edit</string>
    <string name="contact_person_details_delete">Delete</string>
    <string name="collaterals_event_protocols">EVENT PROTOCOLS</string>
    <string name="collaterals_marketing_materials">MARKETING MATERIALS</string>
    <string name="collaterals_event_protocols_detail">EVENT PROTOCOL DETAILS</string>
    <string name="collaterals_marketing_material_detail">Marketing Materials DETAILS</string>
    <string name="collaterals_event_protocols_files">FILES</string>
    <string name="collaterals_ep_crm_no">CRM No</string>
    <string name="collaterals_ep_description">Description</string>
    <string name="collaterals_ep_event_type">Event Type</string>
    <string name="collaterals_ep_is_active">Is Active</string>
    <string name="collaterals_ep_last_update">Last Update</string>
    <string name="collaterals_ep_assigned_to">Created By</string>
    <string name="collaterals_ep_created_time">Created Time</string>
    <string name="collaterals_ep_tags">Tags</string>
    <string name="collaterals_ep_general_information">General Information</string>
    <string name="collaterals_file_title">Title</string>
    <string name="collaterals_filename">Filename</string>
    <string name="collaterals_file_modified_time">Modified Time</string>
    <string name="collaterals_sales_protocol">Sales Protocols</string>
    <string name="collaterals_sp_protocol_type">Protocol Type</string>
    <string name="collaterals_file_type">File Type</string>
    <string name="workplan_gen_info">Workplan</string>
    <string name="venue">Venue:</string>
    <string name="attendance_sheet">Attendance Sheet</string>
    <string name="name_of_attendees">Name of Attendees</string>
    <string name="number_of_attendees">Number of Attendees:</string>
    <string name="with_coSMRs">With CoSMRs</string>
    <string name="smr">SMR:</string>
    <string name="diy_or_supermarket_gen_info">DIY or Supermarket</string>
    <string name="issues_identified">Issues Identified:</string>
    <string name="feedback_from_customer">Feedback From Customer:</string>
    <string name="ongoing_campaigns">Ongoing Campaigns:</string>
    <string name="retail_visit">Retail Visit</string>
    <string name="last_delivery">Last Delivery:</string>
    <string name="project_visit_gen_info">Project Visit</string>
    <string name="trainings_gen_info">Trainings</string>
    <string name="save">Save</string>
    <string name="error">Error saving</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="complete_cancel">Canceled</string>
    <string name="customer_crm_no">CRM No</string>
    <string name="customer_hint">type here</string>
    <string name="customer_contact_hint_fname">first name</string>
    <string name="customer_contact_hint_lname">last name</string>
    <string name="customer_contact_hint_mobile">mobile no.</string>
    <string name="customer_contact_hint_email">email address</string>
    <string name="firstname_contact_person">First Name</string>
    <string name="lastname_contact_person">Last Name</string>
    <string name="position_contact_person">Position</string>
    <string name="customer_contact_person">Customer</string>
    <string name="mobile_no_contact_person">Mobile No</string>
    <string name="assigned_to_contact_person">Created By</string>
    <string name="birthday_contact_person">Birthday</string>
</resources>