<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/collaterals_general_info"
                android:padding="10dp"
                android:text="@string/collaterals_ep_general_information"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bCustomerContactAddCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@+id/bCustomerContactAddCancel"
                android:background="@color/green"
                android:padding="10dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/bCustomerContactAddCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="#FF00"
                android:padding="10dp"
                android:text="@string/cancel" />

            <com.dd.CircularProgressButton
                android:id="@+id/btnWithText2"
                android:layout_width="196dp"
                android:layout_height="64dp"
                android:layout_margin="4dp"
                android:layout_toLeftOf="@+id/btnWithText1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:textComplete="@string/complete_cancel"
                app:textError="@string/error"
                app:textIdle="@string/cancel" />

            <com.dd.CircularProgressButton
                android:id="@+id/btnWithText1"
                android:layout_width="196dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                app:textComplete="@string/next"
                app:textError="@string/error"
                app:textIdle="@string/done" />
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/xml_tablelayout_bg"
            android:padding="5dp" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/customer_crm_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCustomerContactAddField1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:gravity="center"
                    android:hint="AUTO GENERATED"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text="AUTO GENERATED"
                    android:textColor="@color/darkness_blue"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/firstname_contact_person"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCustomerContactAddField2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:hint="@string/customer_contact_hint_fname"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/lastname_contact_person"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCustomerContactAddField3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:hint="@string/customer_contact_hint_lname"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/position_contact_person"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spiCustomerContactAddField4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:dropDownSelector="@color/collaterals_tablerow_trasparent_select"
                    android:spinnerMode="dropdown" >
                </Spinner>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/mobile_no_contact_person"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCustomerContactAddField5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:hint="@string/customer_contact_hint_mobile"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/birthday_contact_person"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left|center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvCustomerContactAddField6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/xml_edittext_bg"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="12/25/2013"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_xxlarge"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/ibCustomerContactAddField6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/desc_list_item_icon"
                        android:src="@android:drawable/ic_menu_today" >
                    </ImageButton>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/contact_person_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCustomerContactAddField7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:hint="@string/customer_contact_hint_email"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/workplan_customer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCustomerContactAddField8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:gravity="center"
                    android:hint="@string/customer_contact_person"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/darkness_blue"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/assigned_to_contact_person"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCustomerContactAddField9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/xml_edittext_bg"
                    android:enabled="false"
                    android:gravity="center"
                    android:hint="@string/customer_hint"
                    android:maxLines="1"
                    android:padding="7dp"
                    android:textColor="@color/darkness_blue"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
