<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/general_info_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-8dp"
            android:layout_weight="1.15"
            android:onClick="activityInfo"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/general_info"
            android:textSize="9sp" />

        <Button
            android:id="@+id/with_co_smrs_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-9dp"
            android:layout_marginTop="-8dp"
            android:layout_weight="1.03"
            android:onClick="jdiStockCheck"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/with_coSMRs"
            android:textSize="9sp" />

        <Button
            android:id="@+id/diy_or_supermarket_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-9dp"
            android:layout_marginTop="-8dp"
            android:layout_weight="1.42"
            android:onClick="jdiMerchandisingCheck"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/diy_or_supermarket_gen_info"
            android:textSize="9sp" />

        <Button
            android:id="@+id/retail_visit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-9dp"
            android:layout_marginTop="-8dp"
            android:layout_weight="1.16"
            android:onClick="competitorStockCheck"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/retail_visit"
            android:textSize="9sp" />

        <Button
            android:id="@+id/project_visit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-9dp"
            android:layout_marginTop="-8dp"
            android:layout_weight="1"
            android:onClick="marketingIntel"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/project_visit_gen_info"
            android:textSize="9sp" />

        <Button
            android:id="@+id/trainings_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-9dp"
            android:layout_marginTop="-8dp"
            android:layout_weight="1.31"
            android:onClick="projectRequirements"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/trainings_gen_info"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- <include layout="@layout/fragment_start_activity" /> -->
    </LinearLayout>
</LinearLayout>