<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:weightSum="11" >

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textColor="@color/dark_gray"
        android:background="@drawable/notif_list_header_left"
        android:gravity="center"
        android:text="@string/profile_notif_date"
        android:textSize="@dimen/text_xlarge" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:background="@drawable/notif_list_header"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:text="@string/profile_notif_notification"
        android:textSize="@dimen/text_xlarge" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textColor="@color/dark_gray"
        android:background="@drawable/notif_list_header_right"
        android:gravity="center"
        android:text="@string/profile_notif_action"
        android:textSize="@dimen/text_xlarge" />

</LinearLayout>